--- a/Places.html
+++ b/Places.html
@@ -44,9 +44,8 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
-                <a href="#menu-toggle" class="btn btn-secondary" id="menu-toggle">Toggle Menu</a>
-                        <h2>Places</h2>
-                        <hr style="">
+                        <h2><b>Places</h2>
+                        <hr>
                         <div class="row">
                             <div class="col-lg-3 ">
                                 <div class="card">
@@ -71,14 +70,6 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Menu Toggle Script -->
-    <script>
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#wrapper").toggleClass("toggled");
-    });
-    </script>
 
 </body>
 
