--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
-                <a href="#menu-toggle" class="btn btn-secondary" id="menu-toggle">Toggle Menu</a>
-                        <h2>Activities</h2>
-                        <hr style="">
+                        <h2><b>Activities</h2>
+                        <hr>
                         <div class="row">
-                            <div class="col-lg-4 ">
+                            <div class="col-lg-3">
                                 <div class="card">
                                     <img class="card-img-top" src="img/packages4.png" alt="Card image cap">
                                     <p class="title">Whale Watching</p>
@@ -57,7 +56,7 @@
                                         <Button class="img-btn2 btn btn-danger btn-xs"><i class="fa fa-trash"></i></Button>
                                 </div>
                             </div>
-                             <div class="col-lg-4 ">
+                             <div class="col-lg-3">
                                 <div class="card">
                                     <img class="card-img-top" src="img/packages5.png" alt="Card image cap">
                                     <p class="title">Mountain Climbing</p>
@@ -66,7 +65,16 @@
                                         <Button class="img-btn2 btn btn-danger btn-xs"><i class="fa fa-trash"></i></Button>
                                 </div>
                             </div>
-                            <div class="col-lg-4">
+                            <div class="col-lg-3">
+                                <div class="card">
+                                    <img class="card-img-top" src="img/packages6.png" alt="Card image cap">
+                                    <p class="title">Water Rafting </p>
+                                        <div class="overlay"></div>
+                                        <Button class="img-btn1 btn btn-default btn-xs"><i class="fa fa-edit"></i></Button>
+                                        <Button class="img-btn2 btn btn-danger btn-xs"><i class="fa fa-trash"></i></Button>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
                                 <div class="card">
                                     <img class="card-img-top" src="img/packages6.png" alt="Card image cap">
                                     <p class="title">Water Rafting </p>
