--- a/Packages.html
+++ b/Packages.html
@@ -44,9 +44,8 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
-                <a href="#menu-toggle" class="btn btn-secondary" id="menu-toggle">Toggle Menu</a>
-                        <h2>Packages</h2>
-                        <hr style="">
+                        <h2><b>Packages</h2>
+                        <hr>
                         <div class="row">
                             <div class="col-lg-3 ">
                                 <div class="card">
